<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/view"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="50dp"
    android:layout_marginEnd="50dp"
    android:layout_gravity="center"
    android:background="@drawable/bg_outline_color"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageWarning"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_delete_all"
        app:tint="?attr/colorPrimaryVariant" />

    <TextView
        android:id="@+id/textQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="-25dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:visibility="gone"
        tools:text="Deseja atribuir falta ao Sd. Douglas?" />

    <TextView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="40dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:text="@string/question_delete_all" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonYes"
            style="@style/Widget.App.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:text="@string/yes"
            android:textSize="16sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonNo"
            style="@style/Widget.App.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:text="@string/no"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>